# open-quadruped

./: .flake8  main_interface.py  noxfile.py  pyproject.toml
control_library/control_library/: body_ik.py  gait_planner.py  leg_ik.py
control_library/vis_tool/: IK_Engine.py  animate.py  interface.py
json_model/: ChangeDisplayModeCommand.json  MotorsPosition.json  MotorsPositionCommand.json  QuadrupedPoseParameter.json  QuadrupedPositionEvent.json  QuitCommand.json  SetGaitByNameCommand.json  SetNextGaitCommand.json  Vector3DM.json
models/: constants.xacro.xml  inertia.xacro.xml  pupper-v2.urdf.xml  pupper-v2.xacro.xml
py_robot_bus/: __init__.py
py_robot_bus/bus/: __init__.py  redis.py
py_robot_bus/bus/message/: __init__.py  input_event.py  motor_position_command.py  quadruped_position_event.py  system.py
py_robot_bus/cli/: __init__.py  engine.py  matplot.py  pad_control.py  pybullet.py
py_robot_bus/engine/: engine.py
py_robot_bus/engine/gait/: __init__.py  gaits.py  parameters.py
py_robot_bus/engine/gait/planner/: __init__.py  (+2 more)
py_robot_bus/io/input/: pad_control.py
py_robot_bus/io/visualizer/: bezier_matplot.py  matplot_visualizer.py  py_bullet.py
py_robot_bus/math/: bezier.py  vector.py
py_robot_bus/model/: leg.py  quadruped.py
py_robot_bus/model/inverse_kinematics/: inverse_kinematics.py
py_robot_bus/tools/: __init__.py
test/: .doit.db.db  39-model-new-pupper-urdf.py  DataclassObject.json  dataclass.py  dodo.py  mujoco-test.py  package-lock.json  package.json  pub.py  target.txt
web/: package-lock.json  package.json
(+2 files in other folders)
