[tool.poetry]
name = "py-robot-bus"
version = "0.1.0"
description = ""
authors = ["Olivier Michaud <olivier@micoli.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.7"
click = "^8.1.7"
matplotlib = "^3.9.2"
colored-traceback = "^0.4.2"
numpy = "^2.1.1"
pybullet = "^3.2.6"
pydantic = "^2.9.2"
pydantic-to-typescript = "^1.0.10"
pydantic_core = "^2.23.4"
pytictoc = "^1.5.3"
PyYAML = "^6.0.2"
redis = "^5.0.8"

types-pynput = "^1.7.7.20240813"
multiplex = "^0.6.1"
ruff = "^0.6.8"
[tool.poetry.group.dev.dependencies]
annotated-types = "^0.7.0"
pytest = "^7.4.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prb = 'py_robot_bus.cli:cli'